# dictionary-parser

./: CMakeLists.txt  README.md
examples/: input.1.dic  input.2.dic  input3.dic
include/: Dictionary.h  DictionaryFile.h  DictionaryGrammar.h  DictionaryInputFile.h  DictionaryKeyWord.h  DictionaryLexer.h  DictionaryManager.h
src/: Dictionary.cpp  DictionaryFile.cpp  DictionaryGrammar.cpp  DictionaryInputFile.cpp  DictionaryKeyWord.cpp  DictionaryLexer.cpp  DictionaryManager.cpp
tests/: test_parser_smoke.cpp  test_three_equations_grammar.cpp
